; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/msi/extr_tokenize.c_sqliteKeywordCode.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/msi/extr_tokenize.c_sqliteKeywordCode.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32, i32, i32* }

@MAX_TOKEN_LEN = common dso_local global i32 0, align 4
@TK_ID = common dso_local global i32 0, align 4
@aKeywordTable = common dso_local global i32 0, align 4
@compKeyword = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32)* @sqliteKeywordCode to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @sqliteKeywordCode(i32* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.TYPE_4__, align 8
  %7 = alloca %struct.TYPE_4__*, align 8
  store i32* %0, i32** %4, align 8
  store i32 %1, i32* %5, align 4
  %8 = load i32, i32* %5, align 4
  %9 = load i32, i32* @MAX_TOKEN_LEN, align 4
  %10 = icmp sgt i32 %8, %9
  br i1 %10, label %11, label %13

11:                                               ; preds = %2
  %12 = load i32, i32* @TK_ID, align 4
  store i32 %12, i32* %3, align 4
  br label %32

13:                                               ; preds = %2
  %14 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %6, i32 0, i32 0
  store i32 0, i32* %14, align 8
  %15 = load i32*, i32** %4, align 8
  %16 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %6, i32 0, i32 2
  store i32* %15, i32** %16, align 8
  %17 = load i32, i32* %5, align 4
  %18 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %6, i32 0, i32 1
  store i32 %17, i32* %18, align 4
  %19 = load i32, i32* @aKeywordTable, align 4
  %20 = load i32, i32* @aKeywordTable, align 4
  %21 = call i32 @ARRAY_SIZE(i32 %20)
  %22 = load i32, i32* @compKeyword, align 4
  %23 = call %struct.TYPE_4__* @bsearch(%struct.TYPE_4__* %6, i32 %19, i32 %21, i32 16, i32 %22)
  store %struct.TYPE_4__* %23, %struct.TYPE_4__** %7, align 8
  %24 = load %struct.TYPE_4__*, %struct.TYPE_4__** %7, align 8
  %25 = icmp ne %struct.TYPE_4__* %24, null
  br i1 %25, label %26, label %30

26:                                               ; preds = %13
  %27 = load %struct.TYPE_4__*, %struct.TYPE_4__** %7, align 8
  %28 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %27, i32 0, i32 0
  %29 = load i32, i32* %28, align 8
  store i32 %29, i32* %3, align 4
  br label %32

30:                                               ; preds = %13
  %31 = load i32, i32* @TK_ID, align 4
  store i32 %31, i32* %3, align 4
  br label %32

32:                                               ; preds = %30, %26, %11
  %33 = load i32, i32* %3, align 4
  ret i32 %33
}

declare dso_local %struct.TYPE_4__* @bsearch(%struct.TYPE_4__*, i32, i32, i32, i32) #1

declare dso_local i32 @ARRAY_SIZE(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
